# contacts

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  person.h
cmake/: libcontactsConfig.cmake
cmake/Modules/: FindFuerte.cmake  FindVelocypack.cmake
include/: person.h  query.h
src/: query.cpp
